# ProjetProg

./: .gitignore  CMakeLists.txt  README.md  README.txt  grid.c  grid.c~  grid.h  play.c  playGraph.c
grid/: CMakeLists.txt  grid.c  grid.h  play.c  test.c
strategy/: A4_parpaite_seegers_legarrec_efficient.c  A4_parpaite_seegers_legarrec_fast.c  CMakeLists.txt  strategy.c  strategy_random_basique.c  test-strategy.c  test_strategy_efficient.c  test_strategy_fast.c  test_strategy_random_basique.c
test/: CMakeLists.txt  test_grid.c
